#1932 closed bug (fixed)
QueryWatcher crashes on startup when running against a link to a query
Reported by: | koki | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Testing QueryWatcher (QW) in hrev24424.
QW is a little utility app that monitors queries stored in a particular folder (under config/settings), and shows their status in real time.
When trying to run QW with a link to a query (as opposed to a query) in the above-mentioned folder, the app crashes upon startup. This does not happen in Zeta.
To reproduce, place a link to a query in...
/boot/home/config/settings/Nerd Herd Software/QueryWatcher
...and run QW.
QW can be downloaded from here: http://www.bebits.com/app/3420
Backtrace attached
Attachments (1)
Change History (4)
by , 17 years ago
Attachment: | qw_bt_2008-03-17 added |
---|
comment:1 by , 17 years ago
Component: | Kits/Storage Kit → System/Kernel |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fixed in hrev24442. The crash is a bug in the application, but it was triggered by Haiku not traversing symlinks when using entry_refs.
comment:2 by , 17 years ago
Thanks Axel! Have not tested it yet, but will do as soon as a fixed revision shows up on the build archive.
comment:3 by , 17 years ago
A bit late, but was able to verify that this bug is fxed now. Thanks again Axel!
Backtrace