* entry_ref_to_vnode() now gets a "traverse" argument, so that it is   able to resolve symlinks. * file_open_entry_ref() now evaluates the openMode and passes the   correct "traverse" argument to entry_ref_to_vnode(). This fixes bug   #1932 (symlink refs wouldn't be resolved). * dir_open_entry_ref() now always resolves symlinks, all other uses of   entry_ref_to_vnode() keep their previous behaviour, though. * Fixed warnings; since Ingo's header changes, NULL now causes a warning   when it is used as int.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24442 a95241bf-73f2-0310-859d-f6bbb57e9c96